--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,6 +23,7 @@
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="/css/style.css" />
     <link href="https://vjs.zencdn.net/7.14.3/video-js.css" rel="stylesheet" />
     <script src="https://vjs.zencdn.net/7.14.3/video.js"></script>
@@ -30,8 +31,9 @@
   <body class="test">
     <header class="container fixed-header">
       <div class="header ">
-        <h1 class="logo"><a href="/feed">Gymstats</a></h1>
-        <div class="links">
+        <a href="/feed"><h1 class="logo m-0">gymstats</h1></a>
+        <div class="headerlinks">
+         
           <div class="post-button">
             <a href="/postmenu"><i class="fas fa-plus"></i></a>
           </div>
