--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') -%>
 
-<div class="container">
+<div class="container" style="padding: 0 0.5rem;">
   <div class="row justify-content-center mt-5">
     <h1 class="col-12 mb-4 text-center">Leaderboard</h1>
     <form class="col-12 mb-4">
