--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,14 +6,17 @@
        
     <div class="profile-info">
       <div>
-      <h2> <%= user.userName.toLowerCase() %></h2>
+      <h2> <%= user.userName.toLowerCase() %><a href="/editProfile/<%= user._id %>"><i class="fas fa-edit"></i></a></h2>
       
       <p class="small">Followers: <%= user.followers.length %></p>
       <p class="small">Following: <%= user.following.length %></p>
       </div>
       <div class="">
+        <% if( user.profilePic.url == "" ){%>
+        <img class="rounded-circle mr-3 mb-2" src="/imgs/default.png" alt="Profile picture" width="100" height="100">
+        <%}else{%>
         <img class="rounded-circle mr-3 mb-2" src="<%= user.profilePic.url %>" alt="Profile picture" width="100" height="100">
-        
+        <%}%>
   <% if(user._id.toString() == loggedUser._id.toString()){ %>
       <a href="/logout" class="col-3 btn btn-primary">Logout</a>
     <% } else {%>
