--- a/views/editprofile.ejs
+++ b/views/editprofile.ejs
@@ -4,7 +4,7 @@
   <div class="column">
     <div class="">
       <div class="p-5">
-        <h2>Add a post</h2>
+        <h2>Edit profile</h2>
         <% if (locals.messages.errors) { %>
           <% messages.errors.forEach( el => { %>
               <div class="alert alert-danger"><%= el.msg %></div>
