image update on click of dp

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,7 +69,9 @@ a:hover{
 td > a {
   display: block;
 }
-
+#form-container {
+  display: none;
+}
 .form-control{
   background-color: var(--border);
   color: var(--black);
