--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,12 +11,28 @@
       <p class="small">Followers: <%= user.followers.length %></p>
       <p class="small">Following: <%= user.following.length %></p>
       </div>
+
       <div class="">
+        <div id="form-container">
+
+        <form id="profile-form" action="/users/saveProfilePic/<%= user._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+  
+            <label for="profilePic" class="form-label">Profile Pic</label>
+            <input type="file" class="form-control" id="profilePic" name="file" accept="image/*" style="display: none;">
+            <button id="submit-btn" type="submit">Submit</button>
+       
+        </form>
+
+        </div>
+
+      
         <% if( user.profilePic.url == "" ){%>
-        <img class="rounded-circle mr-3 mb-2" src="/imgs/default.png" alt="Profile picture" width="100" height="100">
+        <img  id="profile-pic" class="rounded-circle mr-3 mb-2 pointer" src="/imgs/default.png" alt="Profile picture" width="100" height="100">
         <%}else{%>
-        <img class="rounded-circle mr-3 mb-2" src="<%= user.profilePic.url %>" alt="Profile picture" width="100" height="100">
+        <img  id="profile-pic" class="rounded-circle mr-3 mb-2 pointer" src="<%= user.profilePic.url %>" alt="Profile picture" width="100" height="100">
         <%}%>
+
+
   <% if(user._id.toString() == loggedUser._id.toString()){ %>
       <a href="/logout" class="col-3 btn btn-primary">Logout</a>
     <% } else {%>
@@ -125,6 +141,34 @@ tableBtn.addEventListener("click", () => {
   tableContainer.style.display = "block";
   tableBtn.classList.add("active"); // Add active class to the clicked button
   postsBtn.classList.remove("active"); // Remove active class from the other button
+});
+
+// Wait for the DOM to load
+document.addEventListener('DOMContentLoaded', function() {
+
+// Get references to the profile pic and file input elements
+const profilePic = document.querySelector('#profile-pic');
+const fileInput = document.querySelector('.form-control');
+
+// Hide the file input initially
+fileInput.style.display = 'none';
+
+// Add a click event listener to the profile pic element
+profilePic.addEventListener('click', function() {
+  console.log('click')
+  // Show the file input when the profile pic is clicked
+  fileInput.style.display = 'block';
+
+  // Simulate a click on the file input to trigger the file selection dialog
+  fileInput.click();
+});
+
+// Add a change event listener to the file input element
+fileInput.addEventListener('change', function() {
+
+  // Submit the form when a file is selected
+  this.form.submit();
+});
 });
 
 </script>
