edit profile easier to click on profile

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,7 +8,7 @@
       <div>
         
         <% if(user._id.toString() == loggedUser._id.toString()){ %>
-      <h2> <%= user.userName.toLowerCase() %><a href="/editProfile/<%= user._id %>"><i class="fas fa-edit"></i></a></h2>
+      <a href="/editProfile/<%= user._id %>"><h2> <%= user.userName.toLowerCase() %><i class="fas fa-edit"></i></h2></a>
         <% }else{ %>
       <h2> <%= user.userName.toLowerCase() %> </h2>
         <% } %>
