--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,7 +114,7 @@ textarea, input{
   }
 .footer {
   background-color:var(--white);
-    border-bottom: 1px solid var(--border);
+    border-top: 1px solid var(--border);
     display: flex;
     justify-content: space-between;
     align-items: center;
