--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -76,7 +76,7 @@
               
                   <span class="font-weight-bold mr-1"><%= mergedArray[i].caption %></span>
                   <span class="text-muted"><%= mergedArray[i].createdAt.toDateString() %></span>
-                  <span class="text-muted">view comments</span>
+                  <span class="text-muted pb-2">view comments</span>
                 </a>
               </div>
             </div>
