--- a/views/post.ejs
+++ b/views/post.ejs
@@ -48,7 +48,7 @@
           <p ><%= `${post.category}  ${post.weight}KG @ ${bodyWeight} bodyweight` %></p>
         </div>
       <%}%>
-      <div class="d-flex p-0 w-0 justify-content-between">
+      <div class="d-flex pt-2 w-0 justify-content-between">
         <% if(!post.category ){ %>
         <form action="/post/likePost/<%= post._id %>?_method=PUT" method="POST">
           <button class="btn btn-link p-0">
