added close button for edit profile

--- a/views/editprofile.ejs
+++ b/views/editprofile.ejs
@@ -2,8 +2,12 @@
 
 <div class="container">
   <div class="column">
+    
     <div class="">
       <div class="p-5">
+        <div class="d-flex justify-content-end">
+          <a href="/profile/<%= user._id %>"><i class="fas fa-times close-icon"></i></a>
+        </div>
         <h2>Edit profile</h2>
         <% if (locals.messages.errors) { %>
           <% messages.errors.forEach( el => { %>
