--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,24 +15,24 @@
                 <form action="/signup" enctype="multipart/form-data" method="POST">
                     <div class="mb-3">
                         <label for="userName" class="form-label">User Name</label>
-                        <input type="text" class="form-control" id="userName" name="userName" v-model:value="username" pattern="[A-Za-z0-9]+" onkeydown="if(['Space'].includes(arguments[0].code)){return false;}" style="text-transform: lowercase;">
+                        <input type="text" class="form-control" id="userName" name="userName" v-model:value="username" pattern="[A-Za-z0-9]+" onkeydown="if(['Space'].includes(arguments[0].code)){return false;}" style="text-transform: lowercase;" required>
                       </div>
                     <div class="mb-3">
                       <label for="exampleInputEmail1" class="form-label">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" required>
                       <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                     </div>
                     <div class="mb-3">
                       <label for="password" class="form-label">Password</label>
-                      <input type="password" class="form-control" id="password" name="password">
+                      <input type="password" class="form-control" id="password" name="password" required>
                     </div>
                     <div class="mb-3">
                         <label for="confirmPassword" class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
+                        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required>
                       </div>
                       <div class="mb-3">
                         <label for="profilePic" class="form-label">Profile Pic</label>
-                        <input type="file" class="form-control" id="profilePic" name="file" accept="image/*">
+                        <input type="file" class="form-control" id="profilePic" name="file" accept="image/*" required>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </form>
