--- a/views/postmenu.ejs
+++ b/views/postmenu.ejs
@@ -5,7 +5,7 @@
     <div class="">
       
       <div class="d-flex align-items-center" style="display:none; padding: 0.5rem 2rem;">
-        <h1 id="openPostForm" class="pointer postmenufont">POST</h1>
+        <h1 id="openPostForm" class="pointer postmenufont">Post</h1>
         <div id="postForm">
           <h1 class="mb-5">Add a post</h1>
         <form action="/post/createPost" enctype="multipart/form-data" method="POST">
@@ -24,10 +24,10 @@
       </div>
 
       <div class="d-flex align-items-center" style="display:none; padding: 0.5rem 2rem;">
-        <h1 id="openPRForm" class="pointer postmenufont">PERSONAL RECORD</h1>
+        <h1 id="openPRForm" class="pointer postmenufont">Personal Record</h1>
        <div id="prForm">
-        <h1 class="mb-5">Add a personal record</h1>
-        <p class="mb-5 text-muted">Your post will be displayed on the leaderboard, you will need to attach a video of you performing the PR for verification.</p>
+        <h1 class="mb-4">Add a personal record</h1>
+        <p class="mb-4 text-muted">Your post will be displayed on the leaderboard, you will need to attach a video of you performing the PR for verification.</p>
         <form action="/pr/createPR" enctype="multipart/form-data" method="POST">
           <div class="mb-3">
             <select class="form-control" id="category" name="category" required>
