--- a/views/partials/indexheader.ejs
+++ b/views/partials/indexheader.ejs
@@ -31,7 +31,7 @@
   <body class="pt-0">
     <header class="container">
       <div class="header">
-        <h1 class="logo"><a href="/feed">Gymstats</a></h1>
+        <h1 class="logo"><a href="/feed">gymstats</a></h1>
       </div>
     </header>
   </body>
