--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -56,7 +56,7 @@
           <div class="post-info ml-3 d-flex flex-column p-2">
             <div class="d-flex align-items-center mb-1">
               <div class="mb-3">
-                <span class="font-weight-bold mr-1"><%= mergedArray[i].likes %></span>
+                <span class="font-weight-bold mr-1"><%= mergedArray[i].likes.length > 0 ? mergedArray[i].likes.length : 0 %></span>
                 <span class="text-muted">likes</span>
               </div>
             </div>
