--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,10 @@
       sizes="32x32"
       href="/imgs/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-DfN3n3XrNl+EoBm12iBPOIqM3Q2mvp8mW6t/dNsPmVRsLXoKuMr7x/2OtI1D7/2l" crossorigin="anonymous">
+
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
