--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -40,48 +40,27 @@
       <div class="header ">
         <a href="/feed"><h1 class="logo m-0">gymstats</h1></a>
         <div class="headerlinks">
+          <!-- header.ejs -->
          
+          
+
           <div class="post-button">
+            <a href="/users/notifications">
+              <div class="notification-icon">
+                <i class="fas fa-bell"></i>
+                <%if( notificationsCount > 0 ){%>
+                  <% if (!onNotificationsPage) { %>
+                  <span class="notification-count"><%= notificationsCount %></span>
+                  <% } %>
+                <%}%>
+              </div>
+            </a>
             <a href="/postmenu"><i class="fas fa-plus"></i></a>
           </div>
         </div>
       </div>
     </header>
   </body>
-  <script>/* https://github.com/scottjehl/Hide-Address-Bar */
-
-    /*! Normalized address bar hiding for iOS & Android (c) @scottjehl MIT License */
-    (function( win ){
-      var doc = win.document;
-      
-      // If there's a hash, or addEventListener is undefined, stop here
-      if( !location.hash && win.addEventListener ){
-        
-        //scroll to 1
-        win.scrollTo( 0, 1 );
-        var scrollTop = 1,
-          getScrollTop = function(){
-            return win.pageYOffset || doc.compatMode === "CSS1Compat" && doc.documentElement.scrollTop || doc.body.scrollTop || 0;
-          },
-        
-          //reset to 0 on bodyready, if needed
-          bodycheck = setInterval(function(){
-            if( doc.body ){
-              clearInterval( bodycheck );
-              scrollTop = getScrollTop();
-              win.scrollTo( 0, scrollTop === 1 ? 0 : 1 );
-            }	
-          }, 15 );
-        
-        win.addEventListener( "load", function(){
-          setTimeout(function(){
-            //at load, if user hasn't scrolled more than 20 or so...
-            if( getScrollTop() < 20 ){
-              //reset to hide addr bar at onload
-              win.scrollTo( 0, scrollTop === 1 ? 0 : 1 );
-            }
-          }, 0);
-        }, false );
-      }
-    })( this );</script>
+  <script>
+    </script>
 </html>
