--- a/views/post.ejs
+++ b/views/post.ejs
@@ -34,7 +34,14 @@
   
 
   <div class="col-12 p-4">
-    <a href="/profile/<%= post.user._id %>" ><strong><%= user.userName.toLowerCase() %></strong></a> <p><%= post.caption %></p>
+    <div class="d-flex justify-content-between align-items-top">
+      <div>
+        <a href="/profile/<%= post.user._id %>" ><strong><%= user.userName.toLowerCase() %></strong></a> <p><%= post.caption %></p>
+      </div>
+        <span class="text-muted"><%= post.formattedElapsedTime %></span>
+     
+    </div>
+
     <div class="row align-items-center justify-content-between mb-3">
       <% if(post.category) {%>
         <div class="d-flex flex-row align-items-center">
