--- a/views/post.ejs
+++ b/views/post.ejs
@@ -35,26 +35,25 @@
 
   <div class="col-12 p-4">
     <div class="d-flex justify-content-between align-items-top">
-      <div>
-        <a href="/profile/<%= post.user._id %>" ><strong><%= user.userName.toLowerCase() %></strong></a> <p><%= post.caption %></p>
-      </div>
-        <span class="text-muted"><%= post.formattedElapsedTime %></span>
-     
+      
+        <% if(post.category) {%>
+            <div >
+              <div class="trophy-icon d-flex align-items-center ">
+              <h3 class="m-0">PERSONAL RECORD</h3><i class="fas fa-trophy" style="color: yellow!important;"></i>
+            </div>
+              <div class="d-flex flex-column">
+                <% let bodyWeight = post.bodyweight == 0 ? "n/a" : post.bodyweight + "KG" %>
+                <p ><%= `${post.category}  ${post.weight}KG @ ${bodyWeight} bodyweight` %></p>
+              </div>
+            </div>
+            <span class="text-muted"><%= post.formattedElapsedTime %></span>
+          <%}%>
     </div>
 
-    <div class="row align-items-center justify-content-between mb-3">
-      <% if(post.category) {%>
-        <div class="d-flex flex-row align-items-center">
-          <h3>PERSONAL RECORD</h3>
-          <div class="trophy-icon">
-            <i class="fas fa-trophy"></i>
-          </div>
-        </div>
-        <div class="d-flex flex-column">
-          <% let bodyWeight = post.bodyweight == 0 ? "n/a" : post.bodyweight + "KG" %>
-          <p ><%= `${post.category}  ${post.weight}KG @ ${bodyWeight} bodyweight` %></p>
-        </div>
-      <%}%>
+    <div class="row align-items-center justify-content-between mb-3 mt-2">
+      <div class="d-flex">
+        <a href="/profile/<%= post.user._id %>" ><strong style="margin-right:0.5rem;"><%= user.userName.toLowerCase() %></strong></a> <p><%= post.caption %></p>
+      </div>
       <div class="d-flex pt-2 w-0 justify-content-between">
         <% if(!post.category ){ %>
         <form action="/post/likePost/<%= post._id %>" method="POST">
