--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@
 }
 
 html{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif!important;
 }
 .dark-mode {
   --black: #f0f0f0;
@@ -24,6 +24,7 @@ html{
   color: var(--black);
 }
 body{
+  font-family: 'Roboto', sans-serif!important;
   background-color: var(--white);
   color: var(--black);
   padding-top:2.5rem;
