--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -63,7 +63,7 @@
                  
                   
                     <div>
-                      <span class="font-weight-bold mr-1"><%= mergedArray[i].likes.length > 0 ? mergedArray[i].likes.length : 0 %> <span class="text-muted">likes</span></span>
+                      <span class="font-weight-normal mr-1"><%= mergedArray[i].likes.length > 0 ? mergedArray[i].likes.length : 0 %> <span class="text-muted">likes</span></span>
                     </div>
                   
                       <div >
@@ -79,7 +79,7 @@
 
                  
                 <%}else{%>
-                  <span class="font-weight-bold mr-1"><%= mergedArray[i].likes.length > 0 ? mergedArray[i].likes.length : 0 %> <span class="text-muted">likes</span></span>
+                  <span class="font-weight-normal mr-1"><%= mergedArray[i].likes.length > 0 ? mergedArray[i].likes.length : 0 %> <span class="text-muted">likes</span></span>
                   <%}%>
               </div>
              
@@ -87,7 +87,7 @@
               <div class="d-flex flex-column mt-2">
             
                
-                  <span class="font-weight-bold mr-1"><%= mergedArray[i].caption %></span>
+                  <span class="font-weight-normal mr-1"><%= mergedArray[i].caption %></span>
                   <span class="text-muted pb-2">view comments</span>
                 </a>
               </div>
