--- a/views/notifications.ejs
+++ b/views/notifications.ejs
@@ -19,7 +19,7 @@
             <a href="/profile/<%= notification.generator._id %>?notificationId=<%= notification._id %>" >
               <div class="d-flex flex-row align-items-center">
                 <img class="rounded-circle mr-3 feed-pic" src="<%= notification.generator.profilePic.url %>" alt="Profile picture" width="26" height="26">
-                <span class="font-weight-bold"> <%= notification.generator.userName %> followed you <%=notification.formattedElapsedTime %></span>
+                <span class="font-weight-bold"> <%= notification.generator.userName %> </span><span style="margin-left: 0.3rem;">followed you <%=notification.formattedElapsedTime %></span>
               </div>
             </a>
           </div>    
@@ -34,7 +34,7 @@
               <a href="/post/<%= notification.post._id %>?notificationId=<%= notification._id %>" >
                 <div class="d-flex flex-row align-items-center">
                   <img class="rounded-circle mr-3 feed-pic" src="<%= notification.generator.profilePic.url %>" alt="Profile picture" width="26" height="26">
-                  <span class="font-weight-bold"> <%= notification.generator.userName %> posted a new personal record <%=notification.formattedElapsedTime %></span>
+                  <span> <%= notification.generator.userName %></span><span style="margin-left: 0.3rem;"> posted a new personal record <%=notification.formattedElapsedTime %></span>
                 </div>
               </a>
             </div>    
@@ -49,7 +49,7 @@
               <a href="/post/<%= notification.post._id %>?notificationId=<%= notification._id %>" >
                 <div class="d-flex flex-row align-items-center">
                   <img class="rounded-circle mr-3 feed-pic" src="<%= notification.generator.profilePic.url %>" alt="Profile picture" width="26" height="26">
-                  <span class="font-weight-bold"> <%= notification.generator.userName%>  liked your <%= notification.post.category ? "personal record" : "post" %> <%=notification.formattedElapsedTime %></span>
+                  <span class="font-weight-bold"> <%= notification.generator.userName%></span><span style="margin-left: 0.3rem;">  liked your <%= notification.post.category ? "personal record" : "post" %> <%=notification.formattedElapsedTime %></span>
                 </div>
               </a>
             </div>    
@@ -64,7 +64,7 @@
                 <a href="/post/<%= notification.post._id %>?notificationId=<%= notification._id %>" >
                   <div class="d-flex flex-row align-items-center">
                     <img class="rounded-circle mr-3 feed-pic" src="<%= notification.generator.profilePic.url %>" alt="Profile picture" width="26" height="26">
-                    <span class="font-weight-bold"> <%= notification.generator.userName %> commented on your <%= notification.post.category ? "personal record" : "post" %> <%=notification.formattedElapsedTime %></span>
+                    <span class="font-weight-bold"> <%= notification.generator.userName %></span><span style="margin-left: 0.3rem;"> commented on your <%= notification.post.category ? "personal record" : "post" %> <%=notification.formattedElapsedTime %></span>
                   </div>
                 </a>
               </div>    
