--- a/views/postmenu.ejs
+++ b/views/postmenu.ejs
@@ -32,25 +32,29 @@
           <div class="mb-3">
             <select class="form-control" id="category" name="category" required>
               <option value="" disabled selected>Select PR</option>
-              <option value="benchpress">Bench Press 1RM</option>
-              <option value="deadlift">Dead Lift 1RM</option>
-              <option value="squat">Squat 1RM</option>
+              <option value="benchpress">Bench Press</option>
+              <option value="deadlift">Dead Lift</option>
+              <option value="squat">Squat</option>
               <option  disabled value="squat">Premuim Overhead Press 1RM</option>
               <option  disabled value="squat">Premuim Leg Press</option>
               <option  disabled value="squat">Premuim Barbell Row</option>
-             
             </select>
             
             <div class="mb-3 mt-3">
               <label for="weight" class="form-label">Weight in kg</label>
               <input class="w-100" type="number" id="weight" name="weight" required>
             </div>
+            <div class="mb-3 mt-3">
+              <label for="reps" class="form-label">Number of reps</label>
+              <input class="w-100" type="number" id="reps" name="reps" required>
+            </div>
+            
             <label for="caption" class="form-label">Caption</label>
             <textarea class="form-control" id="caption" name="caption" required></textarea>
           </div>
           <div class="mb-3">
             <label for="mediaUpload" class="form-label">Media (Video)</label>
-            <input type="file" class="form-control" id="mediaUpload" name="media" accept="video/*">
+            <input type="file" class="form-control" id="mediaUpload" name="media" accept="video/*" required>
           </div>
           <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
           <i id="closePRForm" class="fas fa-times close-icon"></i>
