--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -15,7 +15,12 @@
           <% } %>
         </select>
       </div>
+      <div class="form-group">
+        <label for="bodyweight-input">Enter a bodyweight in kg:</label>
+        <input type="number" class="form-control form-control-lg" id="bodyweight-input" name="bodyweight" value="<%= selectedBodyweight || '' %>" onchange="this.form.submit()">
+      </div>
     </form>
+    
     <% if (prs.length === 0) { %>
     <h2 class="col-12 text-center">No PRs found for <%= selectedCategory %></h2>
     <% } else { %>
